--- a/style.css
+++ b/style.css
@@ -621,13 +621,16 @@ a:hover {
 .searchBoxError {
     height: 40%;
     width: 50%;
-    background-color: white;
+    background-color: #4c4d52;
     border: 5px solid white;
     transform: translate(50%, 50%);
     text-align: center;
-    font-size: 7vmin;
 }
-
-.searchBoxError img {
-    height: 25vmin;
+.searchBoxError p {
+    color: white;
+    text-align: center;
+    text-shadow: 0 2px 2px black;
+    font-size: 2vmax;
+    top: 20%;
+    position: relative;
 }
