--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     margin: 0 auto;
     background-color: #4c4d52;
     font-family: Arial, Helvetica, sans-serif;
@@ -37,21 +37,62 @@ header {
 .genre {
     display: inline-block;
 }
-.city,
-.genre{
-    text-shadow: 2px 2px 0 black; 
+/*********Materialize inputs********/
+.select-wrapper input.select-dropdown{
+    color: #9e9e9e !important;
 }
-
+.select-wrapper input.select-dropdown:focus {
+    border-bottom: 1px solid coral !important;
+}
+.dropdown-content li>a, .dropdown-content li>span{
+    color: #e4e4e4 !important;
+}
+.dropdown-content{
+    background-color: #4c4d52 !important;
+}
 .center {
     width: 60%;
     height: 100%;
-    font-size: 10vmin;
+    font-size: 8vmin;
 }
-
+input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea{
+    color: #e4e4e4 !important;
+}
+input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):focus:not([readonly]), input[type=password]:not(.browser-default):focus:not([readonly]), input[type=email]:not(.browser-default):focus:not([readonly]), input[type=url]:not(.browser-default):focus:not([readonly]), input[type=time]:not(.browser-default):focus:not([readonly]), input[type=date]:not(.browser-default):focus:not([readonly]), input[type=datetime]:not(.browser-default):focus:not([readonly]), input[type=datetime-local]:not(.browser-default):focus:not([readonly]), input[type=tel]:not(.browser-default):focus:not([readonly]), input[type=number]:not(.browser-default):focus:not([readonly]), input[type=search]:not(.browser-default):focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]){
+    border-bottom: 1px solid coral !important;
+    -webkit-box-shadow: 0 1px 0 0 coral !important;
+    box-shadow: 0 1px 0 0 coral !important;
+}
+::-webkit-input-placeholder {
+    color: #e4e4e4;
+    opacity: 1 !important; /* for older chrome versions. may no longer apply. */
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: #e4e4e4;
+    opacity: 1 !important;
+}
+::-moz-placeholder {  /* Firefox 19+ */
+    color: #e4e4e4;
+    opacity: 1 !important;
+}
+:-ms-input-placeholder {  
+   color: #e4e4e4;
+}
 .hidden {
     display: none;
 }
-
+h3{
+    font-size: 1.17em !important;
+}
+button{
+    line-height: initial !important;
+}
+.genre option{
+    font-size: 2.5vmin;
+    color: hsl(0, 0%, 13%);
+    text-shadow: 1px 1px 0 hsl(16, 100%, 88%);
+    background-color: red;
+}
 button {
     cursor: pointer !important;
 }
@@ -70,6 +111,7 @@ button {
     width: 100%;
     border: 2px solid white;
     border-radius: 10px;
+    display: inline-block;
 }
 
 .inputs {
@@ -684,6 +726,29 @@ a:hover {
     .venue-info,
     .date-time {
         font-size: 4vmin;
+    }
+    .light .artist span,
+    .light .venue span,
+    .light .results-city span,
+    .light .date span,
+    .light .time span {
+        font-size: 3.2vmin;
+        
+    }
+    .pageThreeNameSpan,
+    .pageThreeVenueNameSpan,
+    .pageThreeVenueAddressSpan,
+    .pageThreeDateSpan,
+    .pageThreeTimeSpan{
+        font-size: 3.2vmin;    
+    }
+    .left-event, .center-event, .right-event {
+        padding-top: 5px;
+    }
+    #restaurant, #bar, #lodging {
+        width: 22vmin;
+        height: 7vmin;
+        font-size: 2.4vmin;    
     }
 }
 
