--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ header {
     height: 100%;
     font-size: 8vmin;
 }
+button:focus {
+    outline: none;
+    background-color: coral !important;
+}
 input:not([type]), input[type=text]:not(.browser-default), input[type=password]:not(.browser-default), input[type=email]:not(.browser-default), input[type=url]:not(.browser-default), input[type=time]:not(.browser-default), input[type=date]:not(.browser-default), input[type=datetime]:not(.browser-default), input[type=datetime-local]:not(.browser-default), input[type=tel]:not(.browser-default), input[type=number]:not(.browser-default), input[type=search]:not(.browser-default), textarea.materialize-textarea{
     color: #e4e4e4 !important;
 }
